# PR2

./: Makefile  Makefile.in  config.status  configure  configure.ac  remove_tmp.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
callgrind/: callgrind.out.21496
src/: Makefile  Makefile.am  data.cpp  db.cpp  main.cpp  pr2
src/.deps/: data.Po  db.Po  main.Po
src/cppcheck/: data.cpp.cppcheck  db.cpp.cppcheck  main.cpp.cppcheck
tests/: Makefile.am  train_test.cpp
