AC_PREREQ([2.69])
AC_INIT(pr2, 1.0, pr2@bigbug.ru)
AM_INIT_AUTOMAKE(pr2, 1.0)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([limits.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)